--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
         </div>
         <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
           <h3 class="text-2xl font-bold text-teal-400 mb-2">Experience</h3>
-          <p class="text-gray-300">Web Design Intern, 6 months</p>
-          <p class="text-gray-300">Intern at Bharat Intern, 2 months</p>
-          <p class="text-gray-300">Intern at Steering Minds, 4 months</p>
+          <p class="text-gray-300">Web Design Intern, 2 months</p>
+          <p class="text-gray-300">Intern at Bharat Intern,6 months</p>
+          <p class="text-gray-300">Intern at Steering Minds</p>
         </div>
       </div>
 
