--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h3 class="text-2xl font-bold text-teal-400 mb-2">Experience</h3>
           <p class="text-gray-300">Web Design Intern, 2 months</p>
           <p class="text-gray-300">Intern at Bharat Intern,6 months</p>
-          <p class="text-gray-300">Intern at Steering Minds</p>
+          <p class="text-gray-300">Intern at Stirring Minds</p>
         </div>
       </div>
 
